@@ -1,3 +1,9 @@
+2009-01-28  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
+
+	* include/internal/exmpp_known_nss.hrl.js,
+	include/internal/exmpp_known_elems.hrl.js,
+	include/internal/exmpp_known_attrs.hrl.js: Style.
+
 2009-01-20  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	* src/core/exmpp_iq.erl: Use correct eDoc types.
